--- a/src/styles/sass/Kehadiran.scss
+++ b/src/styles/sass/Kehadiran.scss
@@ -131,6 +131,7 @@
   table {
     .row-img {
       padding: 0.5rem 0.75rem;
+      cursor: default;
     }
 
     .loading-table {
